--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWmfRrgY99qypYmm71eQHIo8n3fSsQhx7HVZ6EFfWC3CI-0N6DRfA=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWNHIHrTrh8lXPiByFqxnFqFQwVpIFKCIXf2JxLhHGGeQyHq0I=w60-h60-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Bestya R</h3>
+                      <h3>Pandu Supoyo</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -466,8 +466,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        sangat puas mengikuti kelas ini, dengan mentor yang berpengalaman dan mampu membangun vibes yang
-                        positif, meningkatkan kepercayaan diri dalam publik speaking dan motivatif.
+                        mantap, yang kelas offline ga diajarin cara ngomong aja tapi juga diperbaiki bahasa tubuhnya serta dapet contoh2x yang bagus dari mentornya.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -479,9 +478,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXBTZz0kVrPeSzUevY_NohxKtq6ys-dACVN1_XV1ve50kZKsT0c=w120-h120-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVwqbAI-FknyMlMjRknH6mxRlT_dxyfBw1eHHUF6QviWuDWv3f6=w60-h60-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Uwa pertiwi</h3>
+                      <h3>Dwi Ratnasari</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -491,9 +490,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The material used is very relevant to everyday social life. The mentors are also very good and
-                        the way they present it is very easy to understand. Continued success, dialog, thank you for the
-                        experience!
+                        Kelasnya seru, Tips dan Triknya dari kelas ini  bisa membantu kita untuk mengatasi kendala berbicara di depan publik atau di depan audiens.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -505,9 +502,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjX58t0zlD0IvxW_683Svegixorhs-y9RUhIExZShYQ6K6v-Oec=w120-h120-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjULRmL8rlkcrpteqW4RhSA5IjDCJd0EPW_rOJLguVxHOk5IH8Q=w60-h60-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Lia Na</h3>
+                      <h3>M Daffa Rianto</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -517,9 +514,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Alhamdulillah dengan adanya public speaking DIALOGIKA sangat bermanfaat sekali bagi sya , yg
-                        awalnya tidak bisa apa² , yg awalnya minder, malu, gk pd, takut dan sebagainya, alhamdulillah
-                        berkat ke tlatenan dri kk mentor dialogika , dikit
+                        Dialogika adalah salah satu tempat untuk kita mendapatkan kesempatan belajar berbicara, tidak hanya belajar teori kita juga diberikan kesempatan untuk berbicara disetiap sesi, dan tutornya sangat ramah dan banyak memberikan saran kepada peserta dari kekurangan masing-masing peserta supaya lebih baik lagi kedepannya dalam public speaking.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -531,9 +526,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXdLXa4DjiqQXM-3Xjc7Wu_5P1IS0klsTQcC-RVDBtBEgy7X_k4=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUe8rR7qMV8fy4CHNzAW_dHtW3EVoCaYsQoXY5WgCVyl8eKePPZ=w60-h60-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Hatta Saifa</h3>
+                      <h3>Mentari Julian</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -543,20 +538,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Pub Speaking Class yang bisa dihadiri offline di Jogja, saya menjadi peserta kelas reguler di
-                        sini dan pengalaman saya selama menjadi peserta kelas alhamdulillah dipertemukan dengan kak
-                        vanny as a coach/mentor yang menyenangkan dan selalu antusias dalam berbagi ilmunya sebagai
-                        seorang expertise pub speaker. <span class="dots">...</span><span class="readMore"> Read More
-                          &raquo;</span><span class="moreText">Para pegawai yang ada di daheim pun ramah-ramah juga
-                          dalam menyambut tiap peserta kelas. Overall menyenangkan dan membantu juga dalam memperdalam
-                          ilmu pub speaking dengan guarantee nya yang bisa tetap mengikuti kelas meskipun sudah
-                          dinyatakan lulus.
-                          Sedikit saran kalau ada yg perlu diperbaiki adalah mungkin pengadaaan kelas terpisah dengan
-                          ruang kerja para karyawan intern supaya para peserta kelas bisa lebih maksimal dalam menyerap
-                          ilmu yang disampaikan, juga responsibilitas admin kelas dalam menanggapi peserta kelas bisa
-                          lebih ditingkatkan, but overall sudah sangat cukup membantuu
-                          Thanks and good job buat kak vanny dan kaka-kaka Dialogika semuanyaa</span><span
-                          class="readLess"> &laquo; Read Less</span>
+                        Thank you so much Dialogika ❤️ Anak saya jadi bertambah kosa katanya dan mulai berani berbicara didepan umum.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
