--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Today’s Promo! ✨🤩🔥</h2>
+        <h2>🤩Today’s Promo! ✨🔥</h2>
         <p>Jangan lewatkan promo kelas dan info-info event dari Dialogika</p>
       </div><!-- End Section Title -->
 
@@ -454,9 +454,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWNHIHrTrh8lXPiByFqxnFqFQwVpIFKCIXf2JxLhHGGeQyHq0I=w60-h60-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWF1tefWYu4m__YVKgZvNpr7cw_HWeUCwsZD4da1O-J6lrSwdzQ=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Pandu Supoyo</h3>
+                      <h3>Nestri Prabandani</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -466,7 +466,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        mantap, yang kelas offline ga diajarin cara ngomong aja tapi juga diperbaiki bahasa tubuhnya serta dapet contoh2x yang bagus dari mentornya.
+                        Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD...
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -478,9 +478,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVwqbAI-FknyMlMjRknH6mxRlT_dxyfBw1eHHUF6QviWuDWv3f6=w60-h60-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVu5lm1DwyAkqpjlFOVVALKFAuRm7mT2bweLDJKdzSCrEYwL-lW=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Dwi Ratnasari</h3>
+                      <h3>https://lh3.googleusercontent.com/a-/ALV-UjVu5lm1DwyAkqpjlFOVVALKFAuRm7mT2bweLDJKdzSCrEYwL-lW=w75-h75-p-rp-mo-br100</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -490,7 +490,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Kelasnya seru, Tips dan Triknya dari kelas ini  bisa membantu kita untuk mengatasi kendala berbicara di depan publik atau di depan audiens.
+                        The public speaking class provided practical techniques to enhance confidence and communication skills. The instructor was engaging, offering personalized feedback. Overall, the course was well-structured, equipping participants with essential presentation tools.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -526,9 +526,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUe8rR7qMV8fy4CHNzAW_dHtW3EVoCaYsQoXY5WgCVyl8eKePPZ=w60-h60-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXZqW8F9gl7t-mnwjDKKcgj-S7PsWBcJyZm52ategJrq0ykKzA0=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Mentari Julian</h3>
+                      <h3>Agatha Giselle Official</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -538,7 +538,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Thank you so much Dialogika ❤️ Anak saya jadi bertambah kosa katanya dan mulai berani berbicara didepan umum.
+                        Amazing experience. My public speaking skills totally improved and i was taught with a very kind teacher aswell.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
