--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjVu5lm1DwyAkqpjlFOVVALKFAuRm7mT2bweLDJKdzSCrEYwL-lW=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>https://lh3.googleusercontent.com/a-/ALV-UjVu5lm1DwyAkqpjlFOVVALKFAuRm7mT2bweLDJKdzSCrEYwL-lW=w75-h75-p-rp-mo-br100</h3>
+                      <h3>Arya Y Darmawan</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
