--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>🤩Today’s Promo! ✨🔥</h2>
-        <p>Jangan lewatkan promo kelas dan info-info event dari Dialogika</p>
+        <h2>Exclusive Deal Today! 🤩✨🔥</h2>
+        <p>Jangan lewatkan penawaran kelas dan acara menarik dari Dialogika!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -346,7 +346,7 @@
             <div class="service-item item-cyan position-relative">
               <i class="bi bi-laptop icon"></i>
               <div>
-                <h3>Promo Spesial Kelas Online! 🚀</h3>
+                <h3>Penawaran Istimewa Kelas Online! 🚀</h3>
                 <p>Nikmati kelas bersama mentor professional dengan peserta terbatas selama sebulan! Dengan garansi
                   pasti bisa!</p>
                 <a href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20saya%20tertarik%20dengan%20*PROMO*%20program%20kelas%20online%20*via%20zoom*%2C%20boleh%20diinfokan%20lebih%20lanjut%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
@@ -359,7 +359,7 @@
             <div class="service-item item-orange position-relative">
               <i class="bi bi-people-fill icon"></i>
               <div>
-                <h3>Kelas Offline Hampir Penuh! 🚨</h3>
+                <h3>Kelas Offline Segera Penuh! 🚨</h3>
                 <p>Dibimbing secara langsung dari ahlinya, fokus latihan dan setiap kali latihan selalu ada evaluasi
                   hingga mahir</p>
                 <a href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20apakah%20seat%20kelas%20offline-nya%20masih%20ada%3F%20boleh%20diinfokan%20lebih%20lanjut%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
@@ -454,9 +454,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWF1tefWYu4m__YVKgZvNpr7cw_HWeUCwsZD4da1O-J6lrSwdzQ=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVrDQauZrtIRyOJdjDp29vpQqjdJwbUsTM2vBzzyyB4gTJl8i3n=w120-h120-p-rp-mo-ba5-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Nestri Prabandani</h3>
+                      <h3>Lulu Luthfiya</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -466,7 +466,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD...
+                        Ikut yg kelas basic, walopun online tp ternyata kelasnya berjalan lancar. Mentornya baik dan jadi dapet temen disini. Awalnya malu bgt kalau harus bicara depan org banyak, skrg mulai percaya diri termasuk ketika menyampaikan pendapat depan umum. Thanks.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -502,9 +502,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjULRmL8rlkcrpteqW4RhSA5IjDCJd0EPW_rOJLguVxHOk5IH8Q=w60-h60-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjX58t0zlD0IvxW_683Svegixorhs-y9RUhIExZShYQ6K6v-Oec=w120-h120-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>M Daffa Rianto</h3>
+                      <h3>Lia Na</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -514,7 +514,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Dialogika adalah salah satu tempat untuk kita mendapatkan kesempatan belajar berbicara, tidak hanya belajar teori kita juga diberikan kesempatan untuk berbicara disetiap sesi, dan tutornya sangat ramah dan banyak memberikan saran kepada peserta dari kekurangan masing-masing peserta supaya lebih baik lagi kedepannya dalam public speaking.
+                        Alhamdulillah dengan adanya public speaking DIALOGIKA sangat bermanfaat sekali bagi sya , yg awalnya tidak bisa apa² , yg awalnya minder, malu, gk pd, takut dan sebagainya, alhamdulillah berkat ke tlatenan dri kk mentor dialogika , dikit demi sedikit rasa semangat dan ingin belajar lebih jauh...
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
