--- a/index.html
+++ b/index.html
@@ -311,6 +311,48 @@
               <img src="assets/img/corporate/polita.png" class="img-fluid" alt="" />
             </div>
             <div class="swiper-slide">
+              <img src="assets/img/corporate/aveon.png" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/avo.png"  class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/gides.webp" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/kdi.png" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/KusumaDentalCare.png" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/mercu.png" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/mnc.webp" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/polita.png" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/ruhui-rahayu.webp" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/smk-dr-sutomo-temanggung.png" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/uad.png" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/ugm.png" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/ui.png" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/corporate/uii.png" class="img-fluid" alt="" />
+            </div>
+            <div class="swiper-slide">
               <img src="assets/img/corporate/uin-suka.png" class="img-fluid" alt="" />
             </div>
           </div>
@@ -466,7 +508,9 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Ikut yg kelas basic, walopun online tp ternyata kelasnya berjalan lancar. Mentornya baik dan jadi dapet temen disini. Awalnya malu bgt kalau harus bicara depan org banyak, skrg mulai percaya diri termasuk ketika menyampaikan pendapat depan umum. Thanks.
+                        Ikut yg kelas basic, walopun online tp ternyata kelasnya berjalan lancar. Mentornya baik dan
+                        jadi dapet temen disini. Awalnya malu bgt kalau harus bicara depan org banyak, skrg mulai
+                        percaya diri termasuk ketika menyampaikan pendapat depan umum. Thanks.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -490,7 +534,9 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The public speaking class provided practical techniques to enhance confidence and communication skills. The instructor was engaging, offering personalized feedback. Overall, the course was well-structured, equipping participants with essential presentation tools.
+                        The public speaking class provided practical techniques to enhance confidence and communication
+                        skills. The instructor was engaging, offering personalized feedback. Overall, the course was
+                        well-structured, equipping participants with essential presentation tools.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -514,7 +560,10 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Alhamdulillah dengan adanya public speaking DIALOGIKA sangat bermanfaat sekali bagi sya , yg awalnya tidak bisa apa² , yg awalnya minder, malu, gk pd, takut dan sebagainya, alhamdulillah berkat ke tlatenan dri kk mentor dialogika , dikit demi sedikit rasa semangat dan ingin belajar lebih jauh...
+                        Alhamdulillah dengan adanya public speaking DIALOGIKA sangat bermanfaat sekali bagi sya , yg
+                        awalnya tidak bisa apa² , yg awalnya minder, malu, gk pd, takut dan sebagainya, alhamdulillah
+                        berkat ke tlatenan dri kk mentor dialogika , dikit demi sedikit rasa semangat dan ingin belajar
+                        lebih jauh...
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -538,7 +587,8 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Amazing experience. My public speaking skills totally improved and i was taught with a very kind teacher aswell.
+                        Amazing experience. My public speaking skills totally improved and i was taught with a very kind
+                        teacher aswell.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
