add more partner

--- a/index.html
+++ b/index.html
@@ -299,61 +299,53 @@
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide">
-              <img src="assets/img/corporate/uad.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/uad.png" class="img-fluid" alt="Universitas Ahmad Dahlan" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/amikom.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/amikom.png" class="img-fluid" alt="Universitas Amikom Yogyakarta" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/mercu.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/mercu.png" class="img-fluid" alt="Mercu Buana University" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/polita.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/polita.png" class="img-fluid" alt="politeknik Aisyiyah Pontianak" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/aveon.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/aveon.png" class="img-fluid" alt="Aveon Hotel" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/avo.png"  class="img-fluid" alt="" />
+              <img src="assets/img/corporate/avo.png" class="img-fluid" alt="AVO Innovation & Technology" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/gides.webp" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/gides.webp" class="img-fluid" alt="GIDES Go Digital Desa" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/kdi.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/kdi.png" class="img-fluid" alt="Kontes Dangdung Indonesia" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/KusumaDentalCare.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/KusumaDentalCare.png" class="img-fluid" alt="Kusuma Dental Care" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/mercu.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/mnc.webp" class="img-fluid" alt="MNCTV" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/mnc.webp" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/ruhui-rahayu.webp" class="img-fluid" alt="Ruhui Rahayu" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/polita.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/smk-dr-sutomo-temanggung.png" class="img-fluid"
+                alt="SMK DR Sutomo Temanggung" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/ruhui-rahayu.webp" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/ugm.png" class="img-fluid" alt="Universitas Gadjah Mada" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/smk-dr-sutomo-temanggung.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/ui.png" class="img-fluid" alt="Universitas Indonesia" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/uad.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/uii.png" class="img-fluid" alt="Universtas Islam Indonesia" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/ugm.png" class="img-fluid" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/ui.png" class="img-fluid" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/uii.png" class="img-fluid" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/uin-suka.png" class="img-fluid" alt="" />
+              <img src="assets/img/corporate/uin-suka.png" class="img-fluid" alt="UIN Sunan Kalijaga" />
             </div>
           </div>
           <div class="swiper-pagination"></div>
