--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Exclusive Deal Today! 🤩✨🔥</h2>
-        <p>Jangan lewatkan penawaran kelas dan acara menarik dari Dialogika!</p>
+        <h2>Penawaran Eksklusif Hari Ini! 💥🌟🔥</h2>
+        <p>Segera manfaatkan penawaran spesial kelas dan event menarik dari Dialogika!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -380,7 +380,7 @@
             <div class="service-item item-cyan position-relative">
               <i class="bi bi-laptop icon"></i>
               <div>
-                <h3>Penawaran Istimewa Kelas Online! 🚀</h3>
+                <h3>Penawaran Eksklusif Kelas Online! 🎯</h3>
                 <p>Nikmati kelas bersama mentor professional dengan peserta terbatas selama sebulan! Dengan garansi
                   pasti bisa!</p>
                 <a href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20saya%20tertarik%20dengan%20*PROMO*%20program%20kelas%20online%20*via%20zoom*%2C%20boleh%20diinfokan%20lebih%20lanjut%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
@@ -393,7 +393,7 @@
             <div class="service-item item-orange position-relative">
               <i class="bi bi-people-fill icon"></i>
               <div>
-                <h3>Kelas Offline Segera Penuh! 🚨</h3>
+                <h3>Kelas Offline Tersisa Sedikit! 📢</h3>
                 <p>Dibimbing secara langsung dari ahlinya, fokus latihan dan setiap kali latihan selalu ada evaluasi
                   hingga mahir</p>
                 <a href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20apakah%20seat%20kelas%20offline-nya%20masih%20ada%3F%20boleh%20diinfokan%20lebih%20lanjut%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
@@ -540,9 +540,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjX58t0zlD0IvxW_683Svegixorhs-y9RUhIExZShYQ6K6v-Oec=w120-h120-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjULRmL8rlkcrpteqW4RhSA5IjDCJd0EPW_rOJLguVxHOk5IH8Q=w120-h120-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Lia Na</h3>
+                      <h3>M Daffa Rianto</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -552,10 +552,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Alhamdulillah dengan adanya public speaking DIALOGIKA sangat bermanfaat sekali bagi sya , yg
-                        awalnya tidak bisa apa² , yg awalnya minder, malu, gk pd, takut dan sebagainya, alhamdulillah
-                        berkat ke tlatenan dri kk mentor dialogika , dikit demi sedikit rasa semangat dan ingin belajar
-                        lebih jauh...
+                        Dialogika adalah salah satu tempat untuk kita mendapatkan kesempatan belajar berbicara, tidak hanya belajar teori kita juga diberikan kesempatan untuk berbicara disetiap sesi, dan tutornya sangat ramah dan banyak memberikan saran...
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -567,9 +564,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXZqW8F9gl7t-mnwjDKKcgj-S7PsWBcJyZm52ategJrq0ykKzA0=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWNHIHrTrh8lXPiByFqxnFqFQwVpIFKCIXf2JxLhHGGeQyHq0I=w120-h120-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Agatha Giselle Official</h3>
+                      <h3>Pandu Supoyo</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -579,8 +576,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Amazing experience. My public speaking skills totally improved and i was taught with a very kind
-                        teacher aswell.
+                        mantap, yang kelas offline ga diajarin cara ngomong aja tapi juga diperbaiki bahasa tubuhnya serta dapet contoh2x yang bagus dari mentornya.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
