update gambar dan testi

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjVrDQauZrtIRyOJdjDp29vpQqjdJwbUsTM2vBzzyyB4gTJl8i3n=w120-h120-p-rp-mo-ba5-br100"
-                        class="testimonial-img" alt="" />
+                        class="testimonial-img" alt="testimoni-1" />
                       <h3>Lulu Luthfiya</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -514,9 +514,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVu5lm1DwyAkqpjlFOVVALKFAuRm7mT2bweLDJKdzSCrEYwL-lW=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="" />
-                      <h3>Arya Y Darmawan</h3>
+                        src="assets/img/intern/septi.jpg"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Septi Allya Rizki</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -526,9 +526,15 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The public speaking class provided practical techniques to enhance confidence and communication
-                        skills. The instructor was engaging, offering personalized feedback. Overall, the course was
-                        well-structured, equipping participants with essential presentation tools.
+                        Selama magang di dialogika aku bisa mengupgrade skill dan memanfaatkannya, dan magang di
+                        dialogika menurutku worth it banget untuk teman teman mahasiswa atau teman teman yang lagi cari
+                        experience magang baik itu online atau offline, bisa nambah relasi, nambah
+                        <span class="dots">...</span><span class="readMore"> Read
+                          More
+                          &raquo;</span>
+                        <span class="moreText"> pengalaman, bisa
+                          bantu update portofolio, dan cv jugaa plusnya rekan kerja seruu dan humble</span><span
+                          class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -541,7 +547,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjULRmL8rlkcrpteqW4RhSA5IjDCJd0EPW_rOJLguVxHOk5IH8Q=w120-h120-p-rp-mo-br100"
-                        class="testimonial-img" alt="" />
+                        class="testimonial-img" alt="testimoni-3" />
                       <h3>M Daffa Rianto</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -552,7 +558,9 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Dialogika adalah salah satu tempat untuk kita mendapatkan kesempatan belajar berbicara, tidak hanya belajar teori kita juga diberikan kesempatan untuk berbicara disetiap sesi, dan tutornya sangat ramah dan banyak memberikan saran...
+                        Dialogika adalah salah satu tempat untuk kita mendapatkan kesempatan belajar berbicara, tidak
+                        hanya belajar teori kita juga diberikan kesempatan untuk berbicara disetiap sesi, dan tutornya
+                        sangat ramah dan banyak memberikan saran...
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -565,7 +573,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjWNHIHrTrh8lXPiByFqxnFqFQwVpIFKCIXf2JxLhHGGeQyHq0I=w120-h120-p-rp-mo-br100"
-                        class="testimonial-img" alt="" />
+                        class="testimonial-img" alt="testimoni-4" />
                       <h3>Pandu Supoyo</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -576,7 +584,8 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        mantap, yang kelas offline ga diajarin cara ngomong aja tapi juga diperbaiki bahasa tubuhnya serta dapet contoh2x yang bagus dari mentornya.
+                        mantap, yang kelas offline ga diajarin cara ngomong aja tapi juga diperbaiki bahasa tubuhnya
+                        serta dapet contoh2x yang bagus dari mentornya.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -735,7 +744,7 @@
           <div class="blog-slider__wrp swiper-wrapper">
             <div class="blog-slider__item swiper-slide">
               <div class="blog-slider__img">
-                <img src="assets/img/team/ron.jpg" alt="" />
+                <img src="assets/img/team/ron.jpg" alt="CEO Dialogika" />
               </div>
               <div class="blog-slider__content">
                 <span class="blog-slider__code">Founder & CEO</span>
@@ -749,7 +758,7 @@
             </div>
             <div class="blog-slider__item swiper-slide">
               <div class="blog-slider__img">
-                <img src="assets/img/team/elsa.jpg" alt="" />
+                <img src="assets/img/team/elsa.jpg" alt="Head of Human Resource" />
               </div>
               <div class="blog-slider__content">
                 <span class="blog-slider__code">Human Resource</span>
@@ -764,7 +773,7 @@
 
             <div class="blog-slider__item swiper-slide">
               <div class="blog-slider__img">
-                <img src="assets/img/team/rindi.jpg" alt="" />
+                <img src="assets/img/team/rindi.jpg" alt="Head of Marketing" />
               </div>
               <div class="blog-slider__content">
                 <span class="blog-slider__code">Head of Marketing</span>
@@ -779,7 +788,7 @@
 
             <div class="blog-slider__item swiper-slide">
               <div class="blog-slider__img">
-                <img src="assets/img/team/razita.png" alt="" />
+                <img src="assets/img/team/razita.png" alt="Social Media Manager" />
               </div>
               <div class="blog-slider__content">
                 <span class="blog-slider__code">Social Media Manager</span>
@@ -1223,7 +1232,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/portfolio/1.webp" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/portfolio/1.webp" alt="" class="img-fluid" />
+                <img src="assets/img/portfolio/1.webp" alt="gambar-1" class="img-fluid" loading="lazy" />
               </a>
             </div>
           </div>
@@ -1231,7 +1240,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/portfolio/2.webp" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/portfolio/2.webp" alt="" class="img-fluid" />
+                <img src="assets/img/portfolio/2.webp" alt="gambar-2" class="img-fluid" loading="lazy" />
               </a>
             </div>
           </div>
@@ -1239,7 +1248,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/portfolio/7.webp" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/portfolio/7.webp" alt="" class="img-fluid" />
+                <img src="assets/img/portfolio/7.webp" alt="gambar-3" class="img-fluid" loading="lazy" />
               </a>
             </div>
           </div>
@@ -1247,7 +1256,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/portfolio/9.webp" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/portfolio/9.webp" alt="" class="img-fluid" />
+                <img src="assets/img/portfolio/9.webp" alt="gambar-4" class="img-fluid" loading="lazy" />
               </a>
             </div>
           </div>
@@ -1255,7 +1264,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/portfolio/10.webp" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/portfolio/10.webp" alt="" class="img-fluid" />
+                <img src="assets/img/portfolio/10.webp" alt="gambar-5" class="img-fluid" loading="lazy" />
               </a>
             </div>
           </div>
@@ -1263,7 +1272,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/portfolio/12.webp" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/portfolio/12.webp" alt="" class="img-fluid" />
+                <img src="assets/img/portfolio/12.webp" alt="gambar-6" class="img-fluid" loading="lazy" />
               </a>
             </div>
           </div>
@@ -1271,7 +1280,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/portfolio/13.webp" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/portfolio/13.webp" alt="" class="img-fluid" />
+                <img src="assets/img/portfolio/13.webp" alt="gambar-7" class="img-fluid" loading="lazy" />
               </a>
             </div>
           </div>
@@ -1279,7 +1288,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/portfolio/14.webp" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/portfolio/14.webp" alt="" class="img-fluid" />
+                <img src="assets/img/portfolio/14.webp" alt="gambar-8" class="img-fluid" loading="lazy" />
               </a>
             </div>
           </div>
