tambah logo dan ganti gambar

--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@
               <img src="assets/img/corporate/aveon.png" class="img-fluid" alt="Aveon Hotel" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/avo.png" class="img-fluid" alt="AVO Innovation & Technology" />
+              <img src="assets/img/corporate/avo.webp" class="img-fluid" alt="AVO Innovation & Technology" />
             </div>
             <div class="swiper-slide">
               <img src="assets/img/corporate/gides.webp" class="img-fluid" alt="GIDES Go Digital Desa" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/kdi.png" class="img-fluid" alt="Kontes Dangdung Indonesia" />
+              <img src="assets/img/corporate/kdi.webp" class="img-fluid" alt="Kontes Dangdung Indonesia" />
             </div>
             <div class="swiper-slide">
               <img src="assets/img/corporate/KusumaDentalCare.png" class="img-fluid" alt="Kusuma Dental Care" />
@@ -329,7 +329,7 @@
               <img src="assets/img/corporate/mnc.webp" class="img-fluid" alt="MNCTV" />
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/corporate/ruhui-rahayu.webp" class="img-fluid" alt="Ruhui Rahayu" />
+              <img src="assets/img/corporate/ruhui-rahayu.png" class="img-fluid" alt="Ruhui Rahayu" />
             </div>
             <div class="swiper-slide">
               <img src="assets/img/corporate/smk-dr-sutomo-temanggung.png" class="img-fluid"
